About links + arrows added to all links

--- a/html/arcanamini2.html
+++ b/html/arcanamini2.html
@@ -65,9 +65,9 @@
           <p>This was a team project organized through a club called Surge. I was the team leader as well as
              the only designer on the team. Working with 4 developers, our goal was to produce a functioning 
              mobile app using React Native. We decided to work on an app concept I previously created called 
-             <a href="../html/arcanamini.html">Arcana Mini</a>. In the end, we were unable to complete the app, 
+             <a href="../html/arcanamini.html">Arcana Mini →</a>. In the end, we were unable to complete the app, 
             but I was able to finish a complete re-design of the app and a functional figma prototype. The link 
-            to the finished prototype can be found <a href="https://www.figma.com/proto/f4AN3eDZowTdrkUukAXeG3/Serge-Project---Team-Blue-(Arcana-Mini)?page-id=1238%3A871&type=design&node-id=1238-2453&viewport=-4440%2C2148%2C0.87&t=J3UYqWAV7Rq7ANP5-1&scaling=scale-down&starting-point-node-id=1238%3A2451">here</a>.</p>
+            to the finished prototype can be found <a href="https://www.figma.com/proto/f4AN3eDZowTdrkUukAXeG3/Serge-Project---Team-Blue-(Arcana-Mini)?page-id=1238%3A871&type=design&node-id=1238-2453&viewport=-4440%2C2148%2C0.87&t=J3UYqWAV7Rq7ANP5-1&scaling=scale-down&starting-point-node-id=1238%3A2451">here →</a>.</p>
         </div>
       </section>
       <section id="process">
