--- a/html/mobileprototype.html
+++ b/html/mobileprototype.html
@@ -66,8 +66,8 @@
                 This was a 3 person project developed over the course of 7 weeks in fall of 2022. 
                 We were tasked with designing, prototyping, and doing user tests for an app with a 
                 senior target audience. We made a digital recipe app for Filipino immigrant seniors 
-                to share recipes and connect with their family. The finished prototype can be found here: 
-                <a href="https://preview.uxpin.com/d8d683c4197730c1b045aa4701737d4d26a8181f#/pages/159707647" target="_blank" rel="noopener noreferrer">https://preview.uxpin.com/d8d683c4197730c1b045aa4701737d4d26a8181f#/pages/159707647</a>
+                to share recipes and connect with their family. The finished prototype can be found 
+                <a href="https://preview.uxpin.com/d8d683c4197730c1b045aa4701737d4d26a8181f#/pages/159707647" target="_blank" rel="noopener noreferrer">here →</a>.
             </p>
         </div>
       </section>
@@ -129,8 +129,8 @@
                 create and use personas and how to conduct user tests. I learned a lot about personas from my teammates 
                 and they were incredibly helpful to us while we were refining our idea so we could design an app that 
                 works well for our audience. I had never conducted a prototype test before, so I quickly developed those skills. 
-                We also created a website to display our work, which can be found here:
-                <a href="https://iat334a3.jasperjade.repl.co/" target="_blank" rel="noopener noreferrer">https://iat334a3.jasperjade.repl.co/</a>
+                We also created a website to display our work, which can be found
+                <a href="https://iat334a3.jasperjade.repl.co/" target="_blank" rel="noopener noreferrer">here →</a>.
             </p>
         </div>
       </section>
