--- a/html/portfolio1.html
+++ b/html/portfolio1.html
@@ -74,7 +74,7 @@
         <div class="section-right">
             <p>I had a personal portfolio prior to this project that I adapted from. My previous website, through Wix, 
                 was not responsive as seen in the screenshot below where the content gets cut off on the right side. 
-                To see this original site, visit <a target="_blank" href="https://jaspergass.wixsite.com/jjgportfolio">https://jaspergass.wixsite.com/jjgportfolio</a></p>
+                To see this original site, visit <a target="_blank" href="https://jaspergass.wixsite.com/jjgportfolio">https://jaspergass.wixsite.com/jjgportfolio →</a>.</p>
             <img src="../img/portfolio1/previous_site.png">
             <p>When creating my style guide I wanted a style minimal enough to let my projects and site content stand out,
                  but also retain some character and uniqueness.</p>
