--- a/html/responsiveweb.html
+++ b/html/responsiveweb.html
@@ -28,7 +28,7 @@
         <div class="expanded">
           <ul>
             <li><a class="no-underline" href="../index.html">Home</a></li>
-            <li><a class="no-underline" href="../html/archive.html">Archive</></li>
+            <li><a class="no-underline" href="../html/archive.html">Archive</a></li>
           </ul>
         </div>
 
@@ -65,7 +65,7 @@
             <p>This was a 2 person project developed over the course of 5 weeks for a web development class I took in the 
               fall of 2022. The task was to create a fake company and design a fully responsive website for it. I had 
               a leadership role in this project since the company identity was my idea, and I directed most of the coding work.
-               Here is a live link to the project: <a href="https://iat339p2.jasperjade.repl.co/index.html" target="_blank" rel="noopener noreferrer">https://iat339p2.jasperjade.repl.co/index.html</a></p>
+               Here is a live link to the <a href="https://iat339p2.jasperjade.repl.co/index.html" target="_blank" rel="noopener noreferrer">project →</a>.</p>
         </div>
       </section>
       <section id="process">
