--- a/html/waxdogonline.html
+++ b/html/waxdogonline.html
@@ -28,7 +28,7 @@
         <div class="expanded">
           <ul>
             <li><a class="no-underline" href="../index.html">Home</a></li>
-            <li><a class="no-underline" href="../html/archive.html">Archive</></li>
+            <li><a class="no-underline" href="../html/archive.html">Archive</a></li>
           </ul>
         </div>
 
@@ -62,7 +62,11 @@
             <h4>Introduction</h1>
         </div>
         <div class="section-right">
-            <p>This was a personal project I completed over the course of 4 weeks. WAX DOG is a local musician who was looking to rent out their studio space and needed a website to advertise their services. I was responsible for the artistic direction, photography, and coding of the site. I worked closely with WAX DOG to make sure the design met their needs. The finished site can be found here: <a href="https://waxdog-online.github.io/" target="_blank" rel="noopener noreferrer">http://waxdog.online/</a></p>
+            <p>This was a personal project I completed over the course of 4 weeks. WAX DOG is a local musician who was 
+              looking to rent out their studio space and needed a website to advertise their services. I was responsible 
+              for the artistic direction, photography, and coding of the site. I worked closely with WAX DOG to make sure
+               the design met their needs. The finished site can be found here: <a href="https://waxdog-online.github.io/"
+                target="_blank" rel="noopener noreferrer">http://waxdog.online/ →</a></p>
         </div>
       </section>
       <section id="process">
