Wax Dog page finished

--- a/html/waxdogonline.html
+++ b/html/waxdogonline.html
@@ -81,7 +81,12 @@
             </div>
             <p>Now that I had the images I wanted to use for the site, I began wireframing. One key thing here was that the client wanted a black website. This was new to me so I spent some time finding inspiration. The client also has a very strong visual sense of character which I wanted to include while maintaining simplicity. For this, I wanted to add a scrolling bar at the top to mimic a scrolling LED sign. I felt this was a simple element that added the fun character that this website needed.</p>
             <img src="../img/waxdog/slider.gif">
+            <p>As always, I spent extra time to make sure the site was fully responsive. It is really important to me that whatever I create remains accessible to all users regardless of what device they choose to access the website from. Below you can see some examples of how the site's content will reshuffle as the screen size changes.</p>
+            <div class="two-img-box">
+              <img class="two-img" src="../img/waxdog/Responsive1.gif" alt="Screencapture of the site to show responsivity.">
+              <img class="two-img" src="../img/waxdog/Responsive2.gif"  alt="Screencapture of the site to show responsivity.">
           </div>
+        </div>
       </section>
       <section id="challenges">
         <div class="section-left">
