Wax Dog Mockups

--- a/html/waxdogonline.html
+++ b/html/waxdogonline.html
@@ -103,7 +103,12 @@
         </div>
         <div class="section-right">
           <p>Though it was short, this was one of the most enjoyable projects I have done to date. Working closely with a client to realize their ideas is a very engaging and fun process. It is highly rewarding to also be able to complete a project like this completely on my own because I can be in control of everything and feel proud of the final product. In the future, I would love to continue doing small projects like this to hone my skills.</p>
+          <div class="two-img-box">
+            <img class="two-img" src="../img/waxdog/WAXDOGMockup1 x1.png" srcset="../img/waxdog/WAXDOGMockup1 x2.png 2x, ../img/waxdog/WAXDOGMockup1 x3.png 3x" alt="Image of drumkit before colour correcting">
+            <img class="two-img" src="../img/waxdog/WAXDOGMockup2 x1.png" srcset="../img/waxdog/WAXDOGMockup2 x2.png 2x, ../img/waxdog/WAXDOGMockup2 x3.png 3x" alt="Image of drumkit after colour correcting">
+          </div>
         </div>
+        
       </section>
     </div>
     
