Portfolio2 page updated

--- a/html/portfolio2.html
+++ b/html/portfolio2.html
@@ -59,10 +59,15 @@
           <h4>Introduction</h4>
         </div>
         <div class="section-right">
-          <p>This website was developed over the course of 2 months. I made a portfolio in Fall 2022 but felt that
-             it needed to be improved (to see that project, <a href="../html/portfolio1.html">click here</a>). My goal
-              with this project was to improve the visual style of my site, and to include an archive to view my past
-               works and photography.</p>
+          <p>The first portfolio I made started as a <a href="../html/portfolio1.html">class project</a> in Fall 2022. Since then, 
+            I have been consistently updating and modifying the site to meet my needs. The following p
+            roject process details the initial creation of this website and some of the modifications I have made over time.
+              </p>
+            
+              <div class="two-img-box">
+                <img class="two-img" src="../img/Portfolio2/Mockup1x1.png" srcset="../img/Portfolio2/Mockup1x2.png 2x, ../img/Portfolio2/Mockup1x3.png 3x" alt="Mockup of the portfolio on a laptop.">
+                <img class="two-img" src="../img/Portfolio2/Mockup2x1.png" srcset="../img/Portfolio2/Mockup2x2.png2x, ../img/Portfolio2/Mockup2x3.png 3x" alt="Mockup of the portfolio on a phone.">
+              </div>
         </div>
       </section>
       <section id="Process">
@@ -94,7 +99,12 @@
           <p>I also used Git to save my progress. I didn’t run into any issues in development that required reverting
              the project to previous versions, but it was still good practice to make sure that none of my work got lost
               and was easily traceable.</p>
-          <img src="../img/gitUse.png">
+          <img src="../img/Portfolio2/gitUse.png">
+          <p>One of the biggest updates I have made to the site since creating it was the reorganization of the homepage. 
+            Originally, the site had the process documentation on this page. I eventually moved this content to its own
+             page and added a project showcase to the home page. This allows people to easily see an overview of my work 
+             on the most convenient page. The overview includes the title, date, and some key terms to understand each project at a glance.</p>
+          <img src="../img/Portfolio2/ProjectShowcase.png">
         </div>
       </section>
       <section id="Challenges">
