--- a/html/arcanamini.html
+++ b/html/arcanamini.html
@@ -59,7 +59,7 @@
 
       <section id="intro">
         <div class="section-left">
-            <h4>Introduction</h1>
+            <h4>Introduction</h4>
         </div>
         <div class="section-right">
             <p>
@@ -76,7 +76,7 @@
       </section>
       <section id="process">
         <div class="section-left">
-            <h4>Process</h1>
+            <h4>Process</h4>
         </div>
         <div class="section-right">
             <p>
@@ -90,7 +90,7 @@
               The first week of this project we spent refining the app proposal and identity. We worked in Figma to create 
               a mood board and basic wireframes to capture the idea of the app. 
             </p>
-            <img src="../img/arcana_mini/moodboard.png">
+            <img src="../img/arcana_mini/moodboard.png" alt="A moodboard to capture the project's aesthetic goals.">
             <p>
               Once our proposal was accepted, we worked on the flow of the app. This was crucial because the structure of
                our app in Android Studio would be informed by the flow and activities that the app needs to have. 
@@ -162,7 +162,7 @@
             </p>
         </div>
       </section>
-      <section id="reflection">
+      <section id="Gallery">
         <div class="section-left">
             <h4>Gallery</h4>
         </div>
