--- a/html/arcanamini2.html
+++ b/html/arcanamini2.html
@@ -50,7 +50,7 @@
       </div> -->
        
       <section class="top-section">
-        <img class="img-border" src="../img/arcana_mini_2/Header-3x.png" srcset="../img/arcana_mini_2/Header-2x.jpg 2x, ../img/arcana_mini_2/Header-3x.png 3x" alt="Several screens of the mobile project.">
+        <img class="img-border" src="../img/arcana_mini_2/Header-3x.png" srcset="../img/arcana_mini_2/Header-2x.jpg 2x, ../img/arcana_mini_2/Header-3x.png 3x" alt="A mockup showing two of the app's screens and a big title with the project name.">
         <div class="project-title">
           <h2>Arcana Mini App 2</h2>
           <h4>Fall 2023 - Spring 2024</h4>
@@ -59,7 +59,7 @@
 
       <section id="intro">
         <div class="section-left">
-            <h4>Introduction</h1>
+            <h4>Introduction</h4>
         </div>
         <div class="section-right">
           <p>This was a team project organized through a club called Surge. I was the team leader as well as
@@ -72,7 +72,7 @@
       </section>
       <section id="process">
         <div class="section-left">
-            <h4>Process</h1>
+            <h4>Process</h4>
         </div>
         <div class="section-right">
             <p>Just like the previous Arcana Mini, this mobile app acts as a journal and guidebook companion for tarot 
@@ -80,7 +80,7 @@
               The app allows users to look up definitions of cards and journal their thoughts to document their tarot 
               journeys and promote reflection. The app requires that the user owns their own deck of tarot cards, 
               but otherwise is accessible to both novice and expert tarot readers.</p>
-            <img src="../img/arcana_mini_2/Scene-1x.jpg" srcset="../img/arcana_mini_2/Scene-2x.png 2x">
+            <img src="../img/arcana_mini_2/Scene-1x.jpg" srcset="../img/arcana_mini_2/Scene-2x.png 2x" alt="Several screens of the mobile project.">
             
             <p>Originally, I wanted to use the same design as the previous app prototype and focus on the coding. After 
               recieving some critiques, I realized that I should take the opportunity to improve the design of the app. 
@@ -91,8 +91,8 @@
                the biggest things I learned through the critiques was that, because journaling can be very personal, it was 
                important for the app to feel safe and trustworthy through its design.</p>
             <div class="two-img-box">
-              <img class="two-img" src="../img/arcana_mini_2/Style1.png">
-              <img class="two-img" src="../img/arcana_mini_2/Style2.png">
+              <img class="two-img" src="../img/arcana_mini_2/Style1.png" alt="The first iteration of the app's appearance.">
+              <img class="two-img" src="../img/arcana_mini_2/Style2.png" alt="The second iteration of the app's appearance. ">
             </div>
 
             <p>Since I was re-designing the app, I also took the time to consider some new features. Two things I considered were 
@@ -109,8 +109,8 @@
             <p>An important step to creating the app was understanding the flow and technical requirements. We chose to visualize 
               this using a site map created in FigJam. This clearly shows all the screens that the app would need and how they
                are linked. This also helped inform the structure of the final figma prototype.</p>
-            <img src="../img/arcana_mini_2/Sitemap.png">
-            <img src="../img/arcana_mini_2/FigmaOverview.png">
+            <img src="../img/arcana_mini_2/Sitemap.png" alt="A site map of the app made in a FigJam file.">
+            <img src="../img/arcana_mini_2/FigmaOverview.png" alt="A screenshot of the figma prototype.">
         </div>
       </section>
       <section id="challenges">
