--- a/html/portfolio2.html
+++ b/html/portfolio2.html
@@ -65,8 +65,8 @@
               </p>
             
               <div class="two-img-box">
-                <img class="two-img" src="../img/Portfolio2/Mockup1x1.png" srcset="../img/Portfolio2/Mockup1x2.png 2x, ../img/Portfolio2/Mockup1x3.png 3x" alt="Mockup of the portfolio on a laptop.">
-                <img class="two-img" src="../img/Portfolio2/Mockup2x1.png" srcset="../img/Portfolio2/Mockup2x2.png2x, ../img/Portfolio2/Mockup2x3.png 3x" alt="Mockup of the portfolio on a phone.">
+                <img class="two-img" src="../img/Portfolio2/Mockup1x1.png" srcset="../img/Portfolio2/Mockup1x2.png 2x, ../img/Portfolio2/Mockup1x3.png 3x" alt="A mock up of the site on a laptop.">
+                <img class="two-img" src="../img/Portfolio2/Mockup2x1.png" srcset="../img/Portfolio2/Mockup2x2.png 2x, ../img/Portfolio2/Mockup2x3.png 3x" alt="A mock up of the site on a phone.">
               </div>
         </div>
       </section>
@@ -83,7 +83,7 @@
              I wanted something simple, refined, and easy to understand. Thats why I chose this very simple navigation
               system and structure for all my pages. To make my site stand out, the visual complexity of the video and
                the home page text effects balance out the simplicity of the website’s structure.  </p>
-          <img src="../img/Portfolio2/portfolioMockups.png">
+          <img src="../img/Portfolio2/portfolioMockups.png" alt="A screenshot of my figma design iterations.">
           <p>In order to make my cursor have a unique shape and mixed blend mode effect through CSS, it needed to be 
             an actual object on the page instead of the normal cursor. To achieve this, I hid the real cursor and 
             created an object on the page that moves using javascript and applied the blend mode. </p>
@@ -99,12 +99,12 @@
           <p>I also used Git to save my progress. I didn’t run into any issues in development that required reverting
              the project to previous versions, but it was still good practice to make sure that none of my work got lost
               and was easily traceable.</p>
-          <img src="../img/Portfolio2/gitUse.png">
+          <img src="../img/Portfolio2/gitUse.png" alt="A screenshot showing my use of github to save the project.">
           <p>One of the biggest updates I have made to the site since creating it was the reorganization of the homepage. 
             Originally, the site had the process documentation on this page. I eventually moved this content to its own
              page and added a project showcase to the home page. This allows people to easily see an overview of my work 
              on the most convenient page. The overview includes the title, date, and some key terms to understand each project at a glance.</p>
-          <img src="../img/Portfolio2/ProjectShowcase.png">
+          <img src="../img/Portfolio2/ProjectShowcase.png" alt="A screenshot of a project overview found on the home page of this site.">
         </div>
       </section>
       <section id="Challenges">
