--- a/html/waxdogonline.html
+++ b/html/waxdogonline.html
@@ -59,24 +59,24 @@
 
       <section id="intro">
         <div class="section-left">
-            <h4>Introduction</h1>
+            <h4>Introduction</h4>
         </div>
         <div class="section-right">
-            <p>This was a personal project I completed over the course of 4 weeks. WAX DOG is a local musician who was 
+            <p>This was a personal project I completed over the course of 4 weeks. WAX DOG is a North Vancouver based musician who was 
               looking to rent out their studio space and needed a website to advertise their services. I was responsible 
               for the artistic direction, photography, and coding of the site. I worked closely with WAX DOG to make sure
                the design met their needs. The finished site can be found here: <a href="https://waxdog-online.github.io/"
                 target="_blank" rel="noopener noreferrer">http://waxdog.online/ →</a></p>
             
                 <div class="two-img-box">
-                  <img class="two-img" src="../img/waxdog/WAXDOGMockup1 x1.png" srcset="../img/waxdog/WAXDOGMockup1 x2.png 2x, ../img/waxdog/WAXDOGMockup1 x3.png 3x" alt="Image of drumkit before colour correcting">
-                  <img class="two-img" src="../img/waxdog/WAXDOGMockup2 x1.png" srcset="../img/waxdog/WAXDOGMockup2 x2.png 2x, ../img/waxdog/WAXDOGMockup2 x3.png 3x" alt="Image of drumkit after colour correcting">
+                  <img class="two-img" src="../img/waxdog/WAXDOGMockup1x1.png" srcset="../img/waxdog/WAXDOGMockup1x2.png 2x, ../img/waxdog/WAXDOGMockup1x3.png 3x" alt="Image of drumkit before colour correcting">
+                  <img class="two-img" src="../img/waxdog/WAXDOGMockup2x1.png" srcset="../img/waxdog/WAXDOGMockup2x2.png 2x, ../img/waxdog/WAXDOGMockup2x3.png 3x" alt="Image of drumkit after colour correcting">
                 </div>
         </div>
       </section>
       <section id="process">
         <div class="section-left">
-            <h4>Process</h1>
+            <h4>Process</h4>
         </div>
         <div class="section-right">
             <p>To begin, I visited the studio for a photoshoot. I helped take photos of the various equipment in the studio using my Fujifilm X-Pro1. I later edited these photos in lightroom to improve their contrast and legibility. Below you can see an example of a picture before and after editing.</p>
@@ -85,7 +85,7 @@
                 <img class="two-img" src="../img/waxdog/drums2-x1.JPG" srcset="../img/waxdog/drums2-x2.jpg 2x, ../img/waxdog/drums2-x3.jpg 3x" alt="Image of drumkit after colour correcting">
             </div>
             <p>Now that I had the images I wanted to use for the site, I began wireframing. One key thing here was that the client wanted a black website. This was new to me so I spent some time finding inspiration. The client also has a very strong visual sense of character which I wanted to include while maintaining simplicity. For this, I wanted to add a scrolling bar at the top to mimic a scrolling LED sign. I felt this was a simple element that added the fun character that this website needed.</p>
-            <img src="../img/waxdog/slider.gif">
+            <img src="../img/waxdog/slider.gif" alt="A gif of the scrolling slider at the top of the site.">
             <p>As always, I spent extra time to make sure the site was fully responsive. It is really important to me that whatever I create remains accessible to all users regardless of what device they choose to access the website from. Below you can see some examples of how the site's content will reshuffle as the screen size changes.</p>
             <div class="two-img-box">
               <img class="two-img" src="../img/waxdog/Responsive1.gif" alt="Screencapture of the site to show responsivity.">
@@ -95,7 +95,7 @@
       </section>
       <section id="challenges">
         <div class="section-left">
-            <h4>Challenges</h1>
+            <h4>Challenges</h4>
         </div>
         <div class="section-right">
           <p>Because the scope of this project was fairly small I did not run into many issues, but there were a few key challenges. One was working with a static github page. Ideally, I would have liked to have a email form on the website so that potential clients could send an email message directly from the page, but github pages unfortunately do not support this action. To compromise, I added a button that creates a new email draft directly.</p>
@@ -108,6 +108,7 @@
         </div>
         <div class="section-right">
           <p>Though it was short, this was one of the most enjoyable projects I have done to date. Working closely with a client to realize their ideas is a very engaging and fun process. It is highly rewarding to also be able to complete a project like this completely on my own because I can be in control of everything and feel proud of the final product. In the future, I would love to continue doing small projects like this to hone my skills.</p>
+          <!-- <img src="../img/waxdog/FullScreenshot.png"> -->
         </div>
         
       </section>
