--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <button onclick="topFunction()" id="myBtn" title="Go to top">Back to Top</button>
 
     <div class="video-wrapper">
-      <video playsinline autoplay muted loop poster="">
+      <video playsinline autoplay muted loop>
         <source src="./img/bgvideo.mp4" type="video/mp4">
       </video>
     </div>
@@ -82,7 +82,7 @@
         </div>
         
       </section>
-      <section id="title">
+      <section id="title2">
         <div class="project-title">
           <h2>Project Gallery</h2>
         </div> 
@@ -96,7 +96,7 @@
           <p>UI design, mobile app prototype, user experience</p>
         </div>
         <div class="section-right">
-          <a href="./html/arcanamini2.html"><img class="img-border" src="./img/arcana_mini_2/Header-1x.jpg" srcset="./img/arcana_mini_2/Header-2x.jpg x2, ./img/arcana_mini_2/Header-3x.png x3"></a>
+          <a href="./html/arcanamini2.html"><img class="img-border" src="./img/arcana_mini_2/Header-1x.jpg" srcset="./img/arcana_mini_2/Header-2x.jpg x2, ./img/arcana_mini_2/Header-3x.png x3" alt="Preview of Arcana Mini 2 mobile app."></a>
         </div>
       </section>
       <section>
@@ -108,7 +108,7 @@
           <p>UI design, website, visual identity, responsiveness</p>
         </div>
         <div class="section-right">
-          <a href="./html/portfolio2.html"><img src="./img/Portfolio2/Portfolio2Banner.png"></a>
+          <a href="./html/portfolio2.html"><img src="./img/Portfolio2/Portfolio2Banner.png" alt="Preview of Portfolio 2 Website."></a>
         </div>
       </section>
       <section>
@@ -120,7 +120,7 @@
           <p>UI design, client work, website, branding</p>
         </div>
         <div class="section-right">
-          <a href="./html/waxdogonline.html"><img src="./img/waxdog/waxdog-header.png"></a>
+          <a href="./html/waxdogonline.html"><img src="./img/waxdog/waxdog-header.png" alt="Preview of Wax Dog Online website."></a>
         </div>
       </section>
       <section>
@@ -132,7 +132,7 @@
           <p>Mobile app, Android Studio, front end development</p>
         </div>
         <div class="section-right">
-          <a href="./html/arcanamini.html"><img src="./img/arcana_mini/arcanamini_banner.png"></a>
+          <a href="./html/arcanamini.html"><img src="./img/arcana_mini/arcanamini_banner.png" alt="Preview of arcana mini mobile app project."></a>
         </div>
       </section>
       <section>
@@ -144,7 +144,7 @@
           <p>UI design, mobile app prototype, accessibility, user testing</p>
         </div>
         <div class="section-right">
-          <a href="./html/mobileprototype.html"><img src="./img/mobile_prototype/mobile-prototype.png"></a>
+          <a href="./html/mobileprototype.html"><img src="./img/mobile_prototype/mobile-prototype.png" alt="Preview of a mobile recipe app."></a>
         </div>
       </section>
       
