--- a/html/portfolio1.html
+++ b/html/portfolio1.html
@@ -50,7 +50,7 @@
           </div>
         -->
       <section class="top-section">
-        <img src="../img/portfolio1/overview.png" alt="Several screens of the mobile project.">
+        <img class="img-border" src="../img/portfolio1/overview.png" alt="A screenshot of the site's home page.">
         <div class="project-title">
           <h2>First Portfolio Website</h2>
           <h4>Fall 2022</h4>
@@ -59,7 +59,7 @@
 
       <section id="intro">
         <div class="section-left">
-            <h4>Introduction</h1>
+            <h4>Introduction</h4>
         </div>
         <div class="section-right">
             <p>This portfolio website started as a 3 week long project for a web development class I took fall 2022. As an 
@@ -69,22 +69,22 @@
       </section>
       <section id="process">
         <div class="section-left">
-            <h4>Process</h1>
+            <h4>Process</h4>
         </div>
         <div class="section-right">
             <p>I had a personal portfolio prior to this project that I adapted from. My previous website, through Wix, 
                 was not responsive as seen in the screenshot below where the content gets cut off on the right side. 
                 To see this original site, visit <a target="_blank" href="https://jaspergass.wixsite.com/jjgportfolio">https://jaspergass.wixsite.com/jjgportfolio →</a>.</p>
-            <img src="../img/portfolio1/previous_site.png">
+            <img class="img-border" src="../img/portfolio1/previous_site.png" alt="A screenshot of my very first site I made using a website builder.">
             <p>When creating my style guide I wanted a style minimal enough to let my projects and site content stand out,
                  but also retain some character and uniqueness.</p>
-            <img src="../img/portfolio1/styleguide.png">
+            <img src="../img/portfolio1/styleguide.png" alt="Site style guide.">
             <p>I then made wireframes. The wireframe below shows the layout I chose for the site, and below 
                 it are two alternative versions of the header I considered.</p>
-            <img src="../img/portfolio1/wireframe3.png">
+            <img src="../img/portfolio1/wireframe3.png" class="img-border" alt="The header I chose for the site.">
             <div class="two-img-box">
-              <img class="two-img" src="../img/portfolio1/wireframe2.png" alt="An error prompt for deleting an account.">
-              <img class="two-img" src="../img/portfolio1/wireframe1.png" alt="The share feature pop up menu.">
+              <img class="two-img img-border" src="../img/portfolio1/wireframe2.png" alt="Alternative header 1 for the site.">
+              <img class="two-img img-border" src="../img/portfolio1/wireframe1.png" alt="Alternative header 2 for the site.">
             </div>
             <p>I then started filling the site with content. I received feedback from my TA that my personal statement 
               and projects lacked direction, so I refined my goals to be more specific to UX/UI and web development 
@@ -100,7 +100,7 @@
                  my title font. It was essential to the branding I had created, but after getting a few people to test 
                  my site I got feedback that suggested it was not easy to read. I changed from House of Cards to Sheepman
                   to keep the style but increase legibility.</p>
-            <img src="../img/portfolio1/Fonts.png">
+            <img src="../img/portfolio1/Fonts.png" alt="Two font options for the site.">
         </div>
       </section>
       <section id="reflection">
