scale model edits

--- a/html/scalemodel.html
+++ b/html/scalemodel.html
@@ -32,9 +32,6 @@
           </ul>
         </div>
 
-        <!-- <div class="condensed">
-          <button id="menu-button" onclick="showMenu()">Menu</button>
-        </div> -->
       </div>
     </nav>
 
@@ -42,13 +39,6 @@
     <button onclick="topFunction()" id="myBtn" title="Go to top">Back to Top</button>
 
     <div class="body-box">
-      <!-- <div id="menu-content" class="menu-content">
-        <ul>
-          <li><a class="no-underline" href="../index.html">Home</a></li>
-          <li><a class="no-underline" href="../html/archive.html">Archive</a></li>
-        </ul>
-      </div> -->
-       
       <section class="top-section">
         <img src="../img/scale_model/scalemodelbanner.jpg"  alt="A mockup showing two of the app's screens and a big title with the project name.">
         <div class="project-title">
@@ -65,8 +55,7 @@
             <p>This was a 3 person group project. Our diorama is an abandoned and overgrown graveyard scene, comprised 
                 of flocking, painted foam, and paper mache. It feature little glowing LED ghosts as a form of lighting. 
                 We chose this concept as we felt it allowed for a variety of colors, materials and general creativity 
-                without requiring excessive precision or being otherwise unrealistic to build. A full version of the 
-                project report can be found <a href="">here →</a>.</p>
+                without requiring excessive precision or being otherwise unrealistic to build.</a>.</p>
 
             <img src="../img/scale_model/3DScanTurnaround.gif">
       </section>
