--- a/html/archive.html
+++ b/html/archive.html
@@ -75,6 +75,12 @@
             <img src="../img/Portfolio2/Portfolio2Banner.png"> 
             <div class="line"></div>
           </div>
+          <div class="project-title gallery-option-item" onclick="location.href='../html/scalemodel.html';">
+            <h3>Scale Model</h3>
+            <p>Summer 2023</p>
+            <img src="../img/scale_model/scalemodelbanner.jpg"> 
+            <div class="line"></div>
+          </div>
           <div class="project-title gallery-option-item" onclick="location.href='../html/arcanamini.html';">
             <h3>Arcana Mini App</h3>
             <p>Spring 2023</p>
