Added DSBIA Page
- Added DSBIA page and assets
- Added a lightbox

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         
         <div id="header-title" class="header-title">
           <h1>Jasper Gass</h1>
-          <h3>Interface designer and web developer</h3>
+          <h3>Interface Designer and Web Developer</h3>
         </div>
 
       <section id="title">
@@ -69,7 +69,7 @@
         <div class="section-left">
           <a href="mailto:jaspergass@outlook.com"><p>jaspergass@outlook.com →</p></a>
           <a href="https://www.linkedin.com/in/jasper-gass-130624223" target="_blank"><p>LinkedIn →</p></a>
-          <a href=""><p>Resume →</p></a>
+          <a href="https://drive.google.com/file/d/1Q3tl_DPJMUp9IAVywr466hvqr_uDoaDz/view?usp=sharing" target="_blank"><p>Resume →</p></a>
           <a href="https://www.instagram.com/jaspergass?igsh=MTN6MmpweDMyMHR0Yg%3D%3D&utm_source=qr" target="_blank"><p>Instagram →</p></a>
         </div>
         <div class="section-right">
@@ -154,7 +154,7 @@
    
     <!-- script -->
     
-    <script  src="./script.js"></script>
+    <script  src="./js/script.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenMax.min.js'></script>
   </body>
 </html>
