--- a/html/portfolio2.html
+++ b/html/portfolio2.html
@@ -149,8 +149,8 @@
    
     <!-- script -->
     
-    <script  src="../script.js"></script>
+    <script  src="../js/script.js"></script>
 
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenMax.min.js'></script><script  src="../script.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenMax.min.js'></script><script  src="../js/script.js"></script>
   </body>
 </html>
